# omniwheel_control

./: CMakeLists.txt  DCMotor.cpp  EncoderDCMotor.cpp  README.md  main.cpp
include/: DCMotor.hpp  EncoderDCMotor.hpp
